# EaseRead

./: .coderabbit.yaml  .coderabbit.yaml.bak  .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  project-description.md
apps/ai-worker/: .gitignore  extracted_data.json  main.py  package.json  processed_elements.json  pyproject.toml
apps/ai-worker/src/: clean_text.py  config.py  create_chunks.py  db.py  embeddings.py  processor_factory.py
apps/ai-worker/src/processors/: base.py  epub_processor.py  pdf_processor.py
apps/ai-worker/tests/: test_extraction.py
apps/api/: package.json
apps/api/scripts/: generate-migration.js
apps/api/src/: app.module.ts  main.ts
apps/api/src/config/: app.config.ts  database.config.ts  gemini.config.ts  index.ts  validation.schema.ts
apps/api/src/database/: data-source.ts  database-initialization.service.ts
apps/api/src/documents/: documents.controller.ts  documents.module.ts  documents.service.ts
apps/api/src/iam/: iam.module.ts
apps/api/src/qa/: dictionary.controller.ts  dictionary.service.ts  embedding.service.ts  llm.service.ts  qa.controller.ts  qa.module.ts  qa.service.ts  rag-search.service.ts
apps/api/src/queue/: queue.constants.ts  queue.module.ts
apps/api/src/redis/: redis.module.ts
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  page.tsx  (+1 more)
docs/: GUIDE.md  contextual-qa-architecture.md  database-architecture.md  document-processing-implementation-guide.md  migrations.md
docs/learnings/: 2026-01-18.md  2026-01-19.md  2026-01-20.md  2026-01-26.md
(+67 files in other folders)
