[project]
name = "ai-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bullmq>=2.19.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=6.4.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "pymupdf>=1.25.0",
    "unstructured[all-docs]>=0.21.5",
    "langchain-openai>=1.1.11",
    "langchain-google-genai>=4.2.1",
]
